theLanguageEmporium/force-app/main/default/objects/Lesson__c/Lesson__c.object-meta.xml
<CustomObject>
    <label>Lesson</label>
    <nameField>
        <label>Lesson Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lessons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>