theLanguageEmporium/force-app/main/default/objects/Lesson__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration in minutes.</description>
    <inlineHelpText>Enter duration in minutes.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>