theLanguageEmporium/force-app/main/default/objects/Lesson__c/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tutor</label>
    <referenceTo>Tutor__c</referenceTo>
    <relationshipLabel>Tutoring</relationshipLabel>
    <relationshipName>Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>