theLanguageEmporium/force-app/main/default/objects/Lesson__c/recordTypes/Lesson.recordType-meta.xml
<RecordType>
    <fullName>Lesson</fullName>
    <active>true</active>
    <description>Use this record type for lessons attached to courses.</description>
    <label>Lesson</label>
</RecordType>