theLanguageEmporium/force-app/main/default/objects/Lesson__c/recordTypes/Tutoring.recordType-meta.xml
<RecordType>
    <fullName>Tutoring</fullName>
    <active>true</active>
    <description>Use this record type for regularly scheduled tutoring.</description>
    <label>Tutoring</label>
</RecordType>