theLanguageEmporium/force-app/main/default/objects/Lesson__c/validationRules/Lesson_Check_Course_Dev.validationRule-meta.xml
<ValidationRule>
    <fullName>Lesson_Check_Course_Dev</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Lesson&apos; &amp;&amp; ISBLANK( Course_Developer__c )</errorConditionFormula>
    <errorDisplayField>Course_Developer__c</errorDisplayField>
    <errorMessage>This lesson must have a course developer attached to it!</errorMessage>
</ValidationRule>